[package]
name = "wasm-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.9.2", default-features = false, features=["codegen", "prost"] }
prost = "0.11"
wasm-rs-async-executor = "0.9.0"
tower =  {version = "0.4.13", features=["util"] }
http = { version = "0.2.9" }

[build-dependencies]
tonic-build = {version = "0.9", default-features = false, features=["prost"] }