[package]
name = "wasm-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"



[dependencies]
tonic = {version = "0.9.2", default-features = false, features=["codegen", "prost"] }
prost = "0.11"
wasm-rs-async-executor = "0.9.0"
tower =  {version = "0.4.13", features=["util"] }
http = { version = "0.2.9" }
serde = "1.0"
postcard = "1.0.4"
async-trait = "0.1.68"
http-body="0.4.5"

[build-dependencies]
tonic-build = {version = "0.9", default-features = false, features=["prost"] }