[package]
name = "wasm-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"
required-features = ["tokio"]

[features]
tokio = ["dep:tokio", "dep:tokio-stream", "tonic/transport"]


[dependencies]
tonic = {version = "0.9.2", default-features = false, features=["codegen", "prost"] }
prost = "0.11"
wasm-rs-async-executor = "0.9.0"
tower =  {version = "0.4.13", features=["util"] }
http = { version = "0.2.9" }
serde = "1.0"
postcard = "1.0.4"
async-trait = "0.1.68"
http-body="0.4.5"
http2parse = { version= "0.2.2", path="rust-http2parse" }
hpack = "0.3.0"
ouroboros = "0.17.1"
tokio = { version = "1.29.1", features=["full"], optional=true}
tokio-stream = { version = "0.1.14", optional=true}
anyhow = "1.0.72"

[build-dependencies]
tonic-build = {version = "0.9", default-features = false, features=["prost"] }